# SimulacionNumerica

./: README.md
Projects_LabJC/: CMakeLists.txt
Projects_LabJC/Babuska/: CMakeLists.txt  Main.cpp  tools.h
Projects_LabJC/FengPoisson/: CMakeLists.txt  Main.cpp
Projects_LabJC/PoissonExperimentoEquipo/: CMakeLists.txt  Main.cpp  tools.cpp  tools.h
Projects_LabJC/TestAQP/: CMakeLists.txt  Main.cpp
Projects_LabJC/TestesGeoelement/: CMakeLists.txt  Main.cpp  tools.h
